Spring24 Appeal: Add initial footer

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -124,4 +124,7 @@
 {% endblock %}
 {% block site_footer%}
   {% include 'includes/donate-modal.html' %}
+  <div id="footer" class="container footer">
+    {% include 'includes/mozilla-footer.html' %}
+  </div>
 {% endblock site_footer %}
