Spring24 Appeal: Revise footer

--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -125,6 +125,6 @@
 {% block site_footer%}
   {% include 'includes/donate-modal.html' %}
   <div id="footer" class="container footer">
-    {% include 'includes/mozilla-footer.html' %}
+    {% include 'includes/appeal-footer.html' %}
   </div>
 {% endblock site_footer %}
