Update matomo js lib

--- a/sites/www.thunderbird.net/404.html
+++ b/sites/www.thunderbird.net/404.html
@@ -33,8 +33,8 @@
 {% endblock %}
 
 {% block tracker_js %}
-      <script type="text/javascript" src="/media/js/piwik.js" async defer></script>
-      <script type="text/javascript" src="/media/js/matomo404.js" charset="utf-8"></script>
+      <script type="text/javascript" src="/media/js/matomo.js" async defer></script>
+      <script type="text/javascript" src="/media/js/matomo-config-404.js" charset="utf-8"></script>
       <noscript>
         <p><img src="//thunderbird.innocraft.cloud/piwik.php?idsite=1&rec=1" style="border:0;" alt="" /></p>
       </noscript>
