--- a/sites/www.thunderbird.net/404.html
+++ b/sites/www.thunderbird.net/404.html
@@ -34,7 +34,7 @@
 
 {% block tracker_js %}
       <script type="text/javascript" src="/media/js/matomo.js" async defer></script>
-      <script type="text/javascript" src="/media/js/matomo-config-404.js" charset="utf-8"></script>
+      <script type="text/javascript" src="/media/js/matomo-config-404.js" async defer charset="utf-8"></script>
       <noscript>
         <p><img src="//thunderbird.innocraft.cloud/piwik.php?idsite=1&rec=1" style="border:0;" alt="" /></p>
       </noscript>
