--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -104,21 +104,27 @@
     </div>
     <div>
       <div class="job-grid">
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
-        {{ job_block('Person McPurrsonface', 'Meow-Stack Engineer', high_res_img('thunderbird/base/placeholder/placeholder.png', optional_attributes={'alt': _('My cat Beatrice') }, scale='2x', alt_formats=('avif', 'webp'))) }}
+        {{ job_block('', 'Alessandro Castellani', high_res_img('thunderbird/staff/alessandro_castellani.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Andrei Hajdukewycz', high_res_img('thunderbird/staff/andrei_hajdukewycz.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Brendan Abolivier', high_res_img('thunderbird/staff/brendan_abolivier.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Chris Aquino', high_res_img('thunderbird/staff/chris_aquino.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Heather Ellsworth', high_res_img('thunderbird/staff/heather_ellsworth.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Ikey Doherty', high_res_img('thunderbird/staff/ikey_doherty.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Jason Evangelho', high_res_img('thunderbird/staff/jason_evangelho.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Joseph Bass', high_res_img('thunderbird/staff/joseph_bass.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Kai Engert', high_res_img('thunderbird/staff/kai_engert.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'kelly', high_res_img('thunderbird/staff/kelly.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Laurel Terlesky', high_res_img('thunderbird/staff/laurel_terlesky.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Magnus Melin', high_res_img('thunderbird/staff/magnus_melin.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Malini Das', high_res_img('thunderbird/staff/malini_das.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Margaret Baker ', high_res_img('thunderbird/staff/margaret_baker.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Martin Giger', high_res_img('thunderbird/staff/martin_giger.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Melissa Autumn', high_res_img('thunderbird/staff/melissa_autumn.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Micah Ilbery', high_res_img('thunderbird/staff/micah_ilbery.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Natalie Ivanova', high_res_img('thunderbird/staff/natalie_ivanova.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Roland Tanglao', high_res_img('thunderbird/staff/roland_tanglao.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Vineet Deo', high_res_img('thunderbird/staff/vineet_deo.png', scale='2x', alt_formats=('webp',))) }}
+        {{ job_block('', 'Wolf Montwé', high_res_img('thunderbird/staff/wolf_montwe.png', scale='2x', alt_formats=('webp',))) }}
       </div>
     </div>
       <div class="section-text">
@@ -128,7 +134,7 @@
 </section>
 {% endblock %}
 
-{% macro job_block(name, title, img) %}
+{% macro job_block(title, name, img) %}
 <div class="person">
   {{ img }}
   <h5>{{ name }}</h5>
