--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -50,7 +50,7 @@
       <a class="strong" href="mailto:business@thunderbird.net">{{ _('Contact the Business Team') }}</a>
     </div>
     <div class="image">
-      {{ high_res_img('thunderbird/base/donate/rocket.png', {'alt': _('A rocket with the Thunderbird logo.')}) }}
+      {{ high_res_img('thunderbird/base/donate/rocket.png', {'alt': _('A rocket with the Thunderbird logo.')}, alt_formats=('avif', 'webp')) }}
     </div>
   </div>
 </section>
