--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -128,7 +128,7 @@
           <p>{{ _('Craft tools you want to use. Help others find and use software that respects their privacy and freedom. Become part of a better future for yourself and others by putting your talents to work at Thunderbird. Read further to learn how.') }}</p>
         </div>
         <div class="image">
-          {{ high_res_img('thunderbird/base/participate/gears.png', {'alt': _('Various gears all working in tandem with a heart, a code symbol, a magnifying glass displaying a very small bug, and the Thunderbird Logo in the centre of it all.')}) }}
+          {{ high_res_img('thunderbird/base/participate/gears.png', {'alt': _('Various gears all working in tandem with a heart, a code symbol, a magnifying glass displaying a very small bug, and the Thunderbird Logo in the centre of it all.')}, alt_formats=('avif', 'webp')) }}
         </div>
       </div>
     </div>
