--- a/sites/www.thunderbird.net/thunderbird/all/index.html
+++ b/sites/www.thunderbird.net/thunderbird/all/index.html
@@ -159,7 +159,7 @@
     </div>
 
     {# No javascript / source of truth for download links #}
-    <div id="all-downloads" class="pb-10 w-full bg-grey-lighter" data-thunderbird-version="{{ latest_thunderbird_version }}">
+    <div id="all-downloads" data-thunderbird-version="{{ latest_thunderbird_version }}">
       <div class="section-text">
         <h1>{{ _('Get <span class="txt-gradient">Thunderbird</span>') }}</h1>
         <p>{{ _('These are officially maintained and distributed by Thunderbird.') }}</p>
