General: Update copy

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -13,14 +13,14 @@
 <section id="meet-thunderbird">
   <div class="container">
     <div class="section-text">
-      <h2>Meet <span class="txt-gradient">Thunderbird</span></h2>
+      <h2>{{ _('Meet <span class="txt-gradient">Thunderbird</span>') }}</h2>
       <p>{{ _('Thunderbird is a free and open-source software project founded in 2003 to make organizing and communicating easier. We are supported by the talent and donations of thousands of generous individuals and are backed by Mozilla. Essential values guide us and make our work relevant. Read further to learn more.') }}</p>
     </div>
     <div class="icon-grid-container">
       <div class="icon-grid">
         <div class="icon-item">
           {{ svg('base/icons/about/values') }}
-          <p>Values</p>
+          <p>{{ _('Values') }}</p>
         </div>
         <div class="icon-item">
           {{ svg('base/icons/about/community') }}
@@ -38,23 +38,23 @@
 <section id="guided-by-values">
   <div class="container">
     <div class="section-text">
-      <h2>Guided by <span class="txt-gradient">Values</span></h2>
+      <h2>{{ _('Guided by <span class="txt-gradient">Values</span>') }}</h2>
     </div>
     <div class="value-section values-privacy">
       <div class="image">
       {{ high_res_img('thunderbird/base/about/privacy.png', {'alt': _('A shield with the Thunderbird logo.')}, alt_formats=('avif', 'webp')) }}
       </div>
       <div class="section-text tight">
-        <h3>Privacy</h3>
-        <h4>You are not the product.</h4>
-        <p>To us, data ownership and privacy are your right wherever you live. Our commitment to <strong>your personal data</strong> is simple:</p>
+        <h3>{{ _('Privacy') }}</h3>
+        <h4>{{ _('You are not the product.') }}</h4>
+        <p>{{ _('To us, data ownership and privacy are your right wherever you live. Our commitment to <strong>your personal data</strong> is simple:') }}</p>
         <ul class="styled-list">
-          <li>We do not collect or store it unless you ask us to.</li>
-          <li>We take great care to keep it safe from misuse.</li>
-          <li>We will never sell it.</li>
-          <li>You retain ownership and control of it.</li>
+          <li>{{ _('We do not collect or store it unless you ask us to.') }}</li>
+          <li>{{ _('We take great care to keep it safe from misuse.') }}</li>
+          <li>{{ _('We will never sell it.') }}</li>
+          <li>{{ _('You retain ownership and control of it.') }}</li>
         </ul>
-        <a class="strong" href="{{ url('privacy') }}">Read the Privacy Policy</a>
+        <a class="strong" href="{{ url('privacy') }}">{{ _('Read the Privacy Policy') }}</a>
       </div>
     </div>
     <div class="value-section values-freedom">
@@ -62,10 +62,10 @@
       {{ high_res_img('thunderbird/base/about/freedom.png', {'alt': _('A key with the Thunderbird logo.')}, alt_formats=('avif', 'webp')) }}
       </div>
       <div class="section-text tight">
-        <h3>Freedom</h3>
-        <h4>Thunderbird belongs to you (and the world).</h4>
-        <p>Thunderbird is Free and Open-Source Software, which means its code is available to see, modify, use, and share freely. Its license also ensures that it will remain free forever. You can think of Thunderbird as a gift from thousands of contributors to you.</p>
-        <a class="strong" href="{{ url('mozorg.mpl2') }}">Learn About MPL 2.0</a>
+        <h3>{{ _('Freedom') }}</h3>
+        <h4>{{ _('Thunderbird belongs to you (and the world).') }}</h4>
+        <p>{{ _('Thunderbird is Free and Open-Source Software, which means its code is available to see, modify, use, and share freely. Its license also ensures that it will remain free forever. You can think of Thunderbird as a gift from thousands of contributors to you.') }}</p>
+        <a class="strong" href="{{ url('mozorg.mpl2') }}">{{ _('Learn About MPL 2.0') }}</a>
       </div>
     </div>
     <div class="value-section values-voice">
@@ -73,10 +73,10 @@
       {{ high_res_img('thunderbird/base/about/voice.png', {'alt': _('A speech bubble with the Thunderbird logo.')}, alt_formats=('avif', 'webp')) }}
       </div>
       <div class="section-text tight">
-        <h3>Voice</h3>
-        <h4>You have a part in Thunderbird's future.</h4>
-        <p>Thunderbird is free from the commercial requirements and incentives that often guide software development. Anyone can get involved in helping make Thunderbird better and available to more people. A contributor-elected council ensures Thunderbird remains true to its values and mission.</p>
-        <strong>Keep Reading...</strong>
+        <h3>{{ _('Voice') }}</h3>
+        <h4>{{ _('You have a part in Thunderbird\'s future.') }}</h4>
+        <p>{{ _('Thunderbird is free from the commercial requirements and incentives that often guide software development. Anyone can get involved in helping make Thunderbird better and available to more people. A contributor-elected council ensures Thunderbird remains true to its values and mission.') }}</p>
+        <strong>{{ _('Keep Reading...') }}</strong>
       </div>
     </div>
   </div>
@@ -85,9 +85,9 @@
 <section id="driven-by-community">
   <div class="container">
     <div class="section-text">
-      <h2>Driven by <span class="txt-gradient">Community</span></h2>
-      <p>Anyone can help make Thunderbird better. Programmers can contribute features they are passionate about or improve the existing code. Those who are multilingual can make Thunderbird accessible to everyone. Those willing can test new versions of Thunderbird and document issues. There are many ways to become part of a thriving community that makes Thunderbird unique. And if you don't have the time to volunteer, you can help support the project through donations.</p>
-      <a class="strong" href="#">Learn How to Get Involved</a>
+      <h2>{{ _('Driven by <span class="txt-gradient">Community</span>') }}</h2>
+      <p>{{ _('Anyone can help make Thunderbird better. Programmers can contribute features they are passionate about or improve the existing code. Those who are multilingual can make Thunderbird accessible to everyone. Those willing can test new versions of Thunderbird and document issues. There are many ways to become part of a thriving community that makes Thunderbird unique. And if you don\'t have the time to volunteer, you can help support the project through donations.') }}</p>
+      <a class="strong" href="{{ url('thunderbird.participate') }}">{{ _('Learn How to Get Involved') }}</a>
     </div>
   </div>
 </section>
@@ -98,9 +98,9 @@
 <section id="supported-by-mozilla">
   <div class="container">
     <div class="section-text">
-      <h2>Supported by <span class="txt-gradient">Mozilla</span></h2>
-      <p>Thunderbird operates as a for-profit subsidiary of the non-profit Mozilla Foundation. This grants us flexibility in hiring and offering optional paid services to sustain Thunderbird's development of free and open-source software far into the future.</p>
-      <p>We have a growing team of talented individuals employed to support the efforts of our contributor community, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.</p>
+      <h2>{{ _('Supported by <span class="txt-gradient">Mozilla</span>') }}</h2>
+      <p>{{ _('Thunderbird operates as a for-profit subsidiary of the non-profit Mozilla Foundation. This grants us flexibility in hiring and offering optional paid services to sustain Thunderbird\'s development of free and open-source software far into the future.') }}</p>
+      <p>{{ _('We have a growing team of talented individuals employed to support the efforts of our contributor community, interface with partner organizations, and maximize the reach of Thunderbird throughout the world.') }}</p>
     </div>
     <div>
       <div class="job-grid">
@@ -128,7 +128,7 @@
       </div>
     </div>
       <div class="section-text">
-        <a class="strong" href="{{ url('mozorg.careers.tb') }}">Explore Career Opportunities</a>
+        <a class="strong" href="{{ url('mozorg.careers.tb') }}">{{ _('Explore Career Opportunities') }}</a>
       </div>
   </div>
 </section>
