--- a/sites/www.thunderbird.net/download/index.html
+++ b/sites/www.thunderbird.net/download/index.html
@@ -13,7 +13,7 @@
 <section>
   <div class="container">
     <div class="section-text">
-      <h1>Download <span class="txt-gradient">Thunderbird</span></h1>
+      <h1>{{ _('Download <span class="txt-gradient">Thunderbird</span>') }}</h1>
       {{ download_thunderbird(force_direct=true, alt_copy=_('Download'), section="homepage-bottom") }}
     </div>
   </div>
