--- a/sites/www.thunderbird.net/thank-you/index.html
+++ b/sites/www.thunderbird.net/thank-you/index.html
@@ -9,6 +9,9 @@
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 {% block category %}{{ _('Resources') }}{% endblock %}
 {% block breadcrumbs %}{% endblock %}
+{% block extra_meta %}
+<meta name="robots" content="noindex,nofollow" />
+{% endblock %}
 
 {% block content %}
 <section>
