--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -12,10 +12,6 @@ with great features!') }}{% endblock %}
 
 {% block breadcrumbs %}{% endblock %}
 
-{% block site_header_unwrapped %}
-{% include 'includes/announcement.html' %}
-{% endblock %}
-
 {% block extrahead %}
   {# Preload the most common format here #}
   <link rel="preload" as="image" href="{{ static('/media/img/thunderbird/new/hero/hero.avif') }}">
@@ -131,11 +127,10 @@ with great features!') }}{% endblock %}
         <h2 class="section-heading">{{_('<span class="txt-gradient">Freedom</span> from Manipulation')}}</h2>
         <h4>{{_('Our agenda isn’t hidden. It’s to make the world better.')}}</h4>
         <p>
-          {% trans %}
+          {% trans open_source='https://en.wikipedia.org/wiki/Open-source_software', mozilla=url('mozorg.home') %}
           Thunderbird is funded by user donations. We don’t collect personal data, sell ads in your inbox, or secretly
-          train AI
-          with your private conversations. Thunderbird is <a href="https://en.wikipedia.org/wiki/Open-source_software">open source</a>. As part of the <a
-            href="https://mozilla.org">Mozilla</a> family you can be confident we
+          train AI with your private conversations. Thunderbird is <a href="{{ open_source }}">open source</a>. As part of the <a
+            href="{{ mozilla }}">Mozilla</a> family you can be confident we
           always put your privacy and security first.
           {% endtrans %}
         </p>
