--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -20,7 +20,6 @@
         <p>
           {% trans trimmed %}
             If you have programming experience there are a lot of ways to contribute to the Thunderbird project. Get started by identifying the area where you have the most experience and interest and following the steps to get started:
-            Desktop Development
           {% endtrans %}
         </p>
         <div class="three-columns">
@@ -52,31 +51,59 @@
       {% call accordion(svg('base/icons/participate/test'), _('Test')) %}
         <div>
           <p>{{ _('With so many unique hardware environments and workflows, community members who test pre-release builds of Thunderbird play a vital role in the quality of the software. Plus, you help catch bugs before they can reach the general public!') }}</p>
+          <ul class="styled-list">
+            <li>{{ _('Learn about testing <a href="%(url)s">Beta</a>'|format(url=url('participate.test.beta'))) }}</li>
+            <li>{{ _('Report <a href="%(url)s">bugs</a>'|format(url=url('participate.test.bugs'))) }}</li>
+          </ul>
         </div>
       {% endcall %}
       {% call accordion(svg('base/icons/participate/translate'), _('Translate')) %}
         <div>
           <p>{{ _('The entire world deserves free and open source software, and Thunderbird is currently translated in more than 50 languages! Use your multilingual talents to help make Thunderbird more widely available than ever.') }}</p>
+          <ul class="styled-list">
+            <li>{{ _('Explore the <a href="%(url)s">docs</a>'|format(url=url('participate.translate.docs'))) }}</li>
+            <li>{{ _('Join us on <a href="%(url)s">Pontoon</a>'|format(url=url('participate.translate.pontoon'))) }}</li>
+          </ul>
         </div>
       {% endcall %}
       {% call accordion(svg('base/icons/participate/support'), _('Support')) %}
         <div>
           <p>{{ _('Are you an experienced Thunderbird user who loves lending a helping hand? Put your knowledge to great use by joining our Support Crew and helping users around the world with their Thunderbird questions.') }}</p>
+          <p>{{ _('You can join our Thunderbird Community Support Matrix room to get and give user support.') }}</p>
+          <ul class="styled-list">
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>'|format(url=url('participate.support.matrix'))) }}</li>
+          </ul>
         </div>
       {% endcall %}
       {% call accordion(svg('base/icons/participate/document'), _('Document')) %}
         <div>
           <p>{{ _('Help ensure the answers are written down before the question is even asked! From documenting features or APIs to frequently asked user support questions, put your knowledge and writing skills to use for the benefit of the entire Thunderbird community.') }}</p>
+          <ul class="styled-list">
+            <li>{{ _('User Support <a href="%(url)s">documentation</a>'|format(url=url('participate.document.user'))) }}</li>
+            <li>{{ _('Developer <a href="%(url)s">documentation</a>'|format(url=url('participate.document.dev'))) }}</li>
+            <li>{{ _('Code <a href="%(url)s">documentation</a>'|format(url=url('participate.document.code'))) }}</li>
+          </ul>
         </div>
       {% endcall %}
       {% call accordion(svg('base/icons/participate/promote'), _('Promote')) %}
         <div>
           <p>{{ _('Advocacy is one of the easiest ways to contribute to Thunderbird! Boosting our posts on Mastodon, showcasing the software to a friend, upvoting a helpful answer on Reddit; anything that adds visibility is a huge help. Here’s where to find us on various social platforms, and how to get involved.') }}</p>
+          <ul class="styled-list">
+            <li><a href="{{ url('participate.promote.reddit') }}">{{ _('Reddit') }}</a></li>
+            <li><a href="{{ url('participate.promote.mastodon') }}">{{ _('Mastodon') }}</a></li>
+            <li><a href="{{ url('participate.promote.twitter') }}">{{ _('X (Formerly Twitter)') }}</a></li>
+            <li><a href="{{ url('participate.promote.youtube') }}">{{ _('YouTube') }}</a></li>
+            <li><a href="{{ url('participate.promote.tilvids') }}">{{ _('TILVids') }}</a></li>
+          </ul>
         </div>
       {% endcall %}
       {% call accordion(svg('base/icons/participate/design'), _('Design')) %}
         <div>
-          <p>{{ _('Share your ideas, and contribute to the ongoing conversations around Thunderbird’s UX and UI. We welcome your feedback on our UX mailing list, and our companion Matrix room.') }}</p>
+          <p>{{ _('Share your ideas, and contribute to the ongoing conversations around Thunderbird’s UX and UI. We welcome your feedback to developer designs on our UX mailing list, and our companion Matrix room.') }}</p>
+          <ul class="styled-list">
+            <li>{{ _('Join in on the <a href="%(url)s">discussion</a>'|format(url=url('participate.design.topicbox'))) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">matrix</a>'|format(url=url('participate.design.matrix'))) }}</li>
+          </ul>
         </div>
       {% endcall %}
       <div class="section-text tight">
