Donation: Localize modify existing donation

--- a/sites/www.thunderbird.net/donate/index.html
+++ b/sites/www.thunderbird.net/donate/index.html
@@ -34,7 +34,7 @@
     <div class="section-text donation-column">
       <!-- TODO: Replace with the actual element, this is just a clone. -->
       <a href="#XVBPRKMH" style="display: none"></a>
-      <p><a class="dotted" href="{{ url('thunderbird.donate.modify') }}">Modify</a> an existing monthly donation.</p>
+      <p>{% trans trimmed url=url('thunderbird.donate.modify') %}<a class="dotted" href="{{ url }}">Modify</a> an existing monthly donation.{% endtrans %}</p>
     </div>
   </div>
 </section>
