--- a/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
+++ b/sites/www.thunderbird.net/thunderbird/115.0/spring24/index.html
@@ -3,7 +3,7 @@
   # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
  {% set active_page = "eoy" %}
- {% extends "includes/bedrock/base-resp.html" %}
+ {% extends "includes/base/base.html" %}
  {% block facebook_id %}348169218537151{# facebook.com/Thunderbird #}{% endblock %}
  {% block twitter_id %}mozthunderbird{% endblock %}
 
@@ -12,7 +12,7 @@
  {% block page_favicon_large %}{{ static('img/thunderbird/favicon-196.png') }}{% endblock %}
  {% block page_ios_icon %}{{ static('img/thunderbird/ios-icon-180.png') }}{% endblock %}
 
- {% block page_css %}<link href="/media/css/appeal/spring24.css" rel="stylesheet" type="text/css" />{% endblock %}
+ {% block base_css %}<link href="/media/css/appeal/spring24.css" rel="stylesheet" type="text/css" />{% endblock %}
 
  {% block page_title %}{{ _('Thunderbird is Powered by You!') }}{% endblock %}
 
@@ -123,7 +123,7 @@
 </section>
 {% endblock %}
 {% block site_footer%}
-  {% include 'includes/donate-modal.html' %}
+  {% include 'includes/donation-includes.html' %}
   <div id="footer" class="container footer">
     {% include 'includes/appeal-footer.html' %}
   </div>
