Post download: Add happy lappy graphic

--- a/sites/www.thunderbird.net/thank-you/index.html
+++ b/sites/www.thunderbird.net/thank-you/index.html
@@ -17,6 +17,9 @@
 <section>
   <div class="container">
     <div class="section-text wide">
+      <div class="image">
+      {{ high_res_img('thunderbird/base/thank-you/happy-laptop.png', {'alt': _('A laptop with an stylized envelop floating in front of the screen. Three hearts of descending size float above the envelop.')}, alt_formats=('avif', 'webp')) }}
+      </div>
       <h3>{{ _('Finish installing, and start enjoying <span class="txt-gradient">Thunderbird</span>.') }}</h3>
       <p>
         {{ _('Having trouble? <a class="inline-link" href="%(url)s">Get help with your installation.</a>')|format(url='https://support.mozilla.org/products/thunderbird/install-migrate-and-update') }}
