Fix some localization issues: * Localize Community and Organization. * Add thunderbird/all as a place that can be localized. * Add back some extensions to babel.cfg to fix macro block localizations.

--- a/sites/www.thunderbird.net/about/index.html
+++ b/sites/www.thunderbird.net/about/index.html
@@ -24,11 +24,11 @@
         </div>
         <div class="icon-item">
           {{ svg('base/icons/about/community') }}
-          <p>Community</p>
+          <p>{{ _('Community') }}</p>
         </div>
         <div class="icon-item">
           {{ svg('base/icons/about/organization') }}
-          <p>Organization</p>
+          <p>{{ _('Organization') }}s</p>
         </div>
       </div>
     </div>
