Home/General: Fix CTA section text no being responsive, and fix unaligned footer text.

--- a/sites/www.thunderbird.net/index.html
+++ b/sites/www.thunderbird.net/index.html
@@ -335,9 +335,9 @@ with great features!') }}{% endblock %}
 
   <section id="free-your-inbox">
     <div class="container">
-      <div class="section-text">
-        <h2 class="cta-sub-heading">{{_('Are you ready to love email again?')}}</h2>
-        <h4 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h4>
+      <div class="section-text cta-section">
+        <h2 class="cta-heading">{{_('<span class="txt-gradient">Free</span> Your Inbox')}}</h2>
+        <h4 class="cta-sub-heading">{{_('Are you ready to love email again?')}}</h4>
       </div>
       <div class="cta">
         <div class="download-button">
