Fix string extraction caused by improper use of inline gettext and string formatting in jinja templates.

--- a/sites/www.thunderbird.net/calendar/index.html
+++ b/sites/www.thunderbird.net/calendar/index.html
@@ -16,7 +16,7 @@
       <div class="section-title">
         <h1>{{ _('Looking For Holiday Calendars?') }}</h1>
       </div>
-      <p>{{ _('If you\'re looking for holiday calendars, please click <a href="%(url)s">here</a>.'|format(url=url('thunderbird.calendar.holiday'))) }}</p>
+      <p>{{ _('If you\'re looking for holiday calendars, please click <a href="%(url)s">here</a>.')|format(url=url('thunderbird.calendar.holiday')) }}</p>
     </div>
   </div>
 </section>
