--- a/sites/www.thunderbird.net/contact/index.html
+++ b/sites/www.thunderbird.net/contact/index.html
@@ -13,7 +13,7 @@
 <section id="need-to-talk">
   <div class="container no-gap">
     <div class="section-text">
-      <h2>Need to <span class="txt-gradient">Talk?</span></h2>
+      <h2>{{ _('Need to <span class="txt-gradient">Talk?</span>') }}</h2>
       <h4>{{ _('Direct your inquiries to the people below.') }}</h4>
     </div>
     <div class="block-grid">
