--- a/sites/www.thunderbird.net/participate/index.html
+++ b/sites/www.thunderbird.net/participate/index.html
@@ -26,25 +26,25 @@
         <div>
           <h4>{{ _('Desktop Development:') }}</h4>
           <ul class="styled-list">
-            <li>{{ _('Explore the <a href="%(url)s">docs</a>'|format(url=url('participate.desktop.docs'))) }}</li>
-            <li>{{ _('Join the <a href="%(url)s">repository</a>'|format(url=url('participate.desktop.repo'))) }}</li>
-            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>'|format(url=url('participate.desktop.matrix'))) }}</li>
+            <li>{{ _('Explore the <a href="%(url)s">docs</a>')|format(url=url('participate.desktop.docs')) }}</li>
+            <li>{{ _('Join the <a href="%(url)s">repository</a>')|format(url=url('participate.desktop.repo')) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.desktop.matrix')) }}</li>
           </ul>
         </div>
         <div>
           <h4>{{ _('Android Development:') }}</h4>
           <ul class="styled-list">
-            <li>{{ _('Explore the <a href="%(url)s">docs</a>'|format(url=url('participate.android.docs'))) }}</li>
-            <li>{{ _('Join the <a href="%(url)s">repository</a>'|format(url=url('participate.android.repo'))) }}</li>
-            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>'|format(url=url('participate.android.matrix'))) }}</li>
+            <li>{{ _('Explore the <a href="%(url)s">docs</a>')|format(url=url('participate.android.docs')) }}</li>
+            <li>{{ _('Join the <a href="%(url)s">repository</a>')|format(url=url('participate.android.repo')) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.android.matrix')) }}</li>
           </ul>
         </div>
         <div>
           <h4>{{ _('Website Development:') }}</h4>
           <ul class="styled-list">
-            <li>{{ _('Explore the <a href="%(url)s">docs</a>'|format(url=url('participate.website.docs'))) }}</li>
-            <li>{{ _('Join the <a href="%(url)s">repository</a>'|format(url=url('participate.website.repo'))) }}</li>
-            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>'|format(url=url('participate.website.matrix'))) }}</li>
+            <li>{{ _('Explore the <a href="%(url)s">docs</a>')|format(url=url('participate.website.docs')) }}</li>
+            <li>{{ _('Join the <a href="%(url)s">repository</a>')|format(url=url('participate.website.repo')) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.website.matrix')) }}</li>
           </ul>
         </div>
       {% endcall %}
@@ -52,8 +52,8 @@
         <div>
           <p>{{ _('With so many unique hardware environments and workflows, community members who test pre-release builds of Thunderbird play a vital role in the quality of the software. Plus, you help catch bugs before they can reach the general public!') }}</p>
           <ul class="styled-list">
-            <li>{{ _('Learn about testing <a href="%(url)s">Beta</a>'|format(url=url('participate.test.beta'))) }}</li>
-            <li>{{ _('Report <a href="%(url)s">bugs</a>'|format(url=url('participate.test.bugs'))) }}</li>
+            <li>{{ _('Learn about testing <a href="%(url)s">Beta</a>')|format(url=url('participate.test.beta')) }}</li>
+            <li>{{ _('Report <a href="%(url)s">bugs</a>')|format(url=url('participate.test.bugs')) }}</li>
           </ul>
         </div>
       {% endcall %}
@@ -61,8 +61,8 @@
         <div>
           <p>{{ _('The entire world deserves free and open source software, and Thunderbird is currently translated in more than 50 languages! Use your multilingual talents to help make Thunderbird more widely available than ever.') }}</p>
           <ul class="styled-list">
-            <li>{{ _('Explore the <a href="%(url)s">docs</a>'|format(url=url('participate.translate.docs'))) }}</li>
-            <li>{{ _('Join us on <a href="%(url)s">Pontoon</a>'|format(url=url('participate.translate.pontoon'))) }}</li>
+            <li>{{ _('Explore the <a href="%(url)s">docs</a>')|format(url=url('participate.translate.docs')) }}</li>
+            <li>{{ _('Join us on <a href="%(url)s">Pontoon</a>')|format(url=url('participate.translate.pontoon')) }}</li>
           </ul>
         </div>
       {% endcall %}
@@ -71,7 +71,7 @@
           <p>{{ _('Are you an experienced Thunderbird user who loves lending a helping hand? Put your knowledge to great use by joining our Support Crew and helping users around the world with their Thunderbird questions.') }}</p>
           <p>{{ _('You can join our Thunderbird Community Support Matrix room to get and give user support.') }}</p>
           <ul class="styled-list">
-            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>'|format(url=url('participate.support.matrix'))) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.support.matrix')) }}</li>
           </ul>
         </div>
       {% endcall %}
@@ -79,9 +79,9 @@
         <div>
           <p>{{ _('Help ensure the answers are written down before the question is even asked! From documenting features or APIs to frequently asked user support questions, put your knowledge and writing skills to use for the benefit of the entire Thunderbird community.') }}</p>
           <ul class="styled-list">
-            <li>{{ _('User Support <a href="%(url)s">documentation</a>'|format(url=url('participate.document.user'))) }}</li>
-            <li>{{ _('Developer <a href="%(url)s">documentation</a>'|format(url=url('participate.document.dev'))) }}</li>
-            <li>{{ _('Code <a href="%(url)s">documentation</a>'|format(url=url('participate.document.code'))) }}</li>
+            <li>{{ _('User Support <a href="%(url)s">documentation</a>')|format(url=url('participate.document.user')) }}</li>
+            <li>{{ _('Developer <a href="%(url)s">documentation</a>')|format(url=url('participate.document.dev')) }}</li>
+            <li>{{ _('Code <a href="%(url)s">documentation</a>')|format(url=url('participate.document.code')) }}</li>
           </ul>
         </div>
       {% endcall %}
@@ -101,8 +101,8 @@
         <div>
           <p>{{ _('Share your ideas, and contribute to the ongoing conversations around Thunderbird’s UX and UI. We welcome your feedback to developer designs on our UX mailing list, and our companion Matrix room.') }}</p>
           <ul class="styled-list">
-            <li>{{ _('Join in on the <a href="%(url)s">discussion</a>'|format(url=url('participate.design.topicbox'))) }}</li>
-            <li>{{ _('Say hello in <a href="%(url)s">matrix</a>'|format(url=url('participate.design.matrix'))) }}</li>
+            <li>{{ _('Join in on the <a href="%(url)s">discussion</a>')|format(url=url('participate.design.topicbox')) }}</li>
+            <li>{{ _('Say hello in <a href="%(url)s">Matrix</a>')|format(url=url('participate.design.matrix')) }}</li>
           </ul>
         </div>
       {% endcall %}
