Fix typo on alt text.

--- a/sites/www.thunderbird.net/thank-you/index.html
+++ b/sites/www.thunderbird.net/thank-you/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="section-text wide">
       <div class="image">
-      {{ high_res_img('thunderbird/base/thank-you/happy-laptop.png', {'alt': _('A laptop with an stylized envelop floating in front of the screen. Three hearts of descending size float above the envelop.')}, alt_formats=('avif', 'webp')) }}
+      {{ high_res_img('thunderbird/base/thank-you/happy-laptop.png', {'alt': _('A laptop with an stylized envelope floating in front of the screen. Three hearts of descending size float above the envelope.')}, alt_formats=('avif', 'webp')) }}
       </div>
       <h3>{{ _('Finish installing, and start enjoying <span class="txt-gradient">Thunderbird</span>.') }}</h3>
       <p>
